product_docs/docs/bart/2.5.4/bart_inst/03_configuring_bart.mdx
---
title: "Configuring BART"
---

<div id="configuration" class="registered_link"></div>


To configure BART, you must identify the BART user account, [configure the BART host](#configuring_the_bart_host), and [configure the database server](#configure_database_server) that will be backed up.

<div id="establish_user_account" class="registered_link"></div>

## Establishing the BART User Account

The BART user account is an operating system user that will run the BART command line program. The BART user account must:

-   own the BART backup catalog.
-   be able to run the `bart` program and the `bart-scanner` program.
-   be able to establish a SSH/SCP connection to and from each database server managed by BART.

You can optionally use the `enterprisedb` database user as the BART user account for an Advanced Server database and use the `postgres` database user as the BART user account for a PostgreSQL server. If you do not wish to use an existing database user as the BART user account, you must create an operating system user to assume the role.

<div id="configuring_the_bart_host" class="registered_link"></div>

## Configuring the BART Host

This section describes the configuration steps that must be performed on the BART host; these steps must be performed as a root user.

**Step 1.** Navigate to the `usr/edb/bart/etc` directory and make a copy of the `bart.cfg.sample` file to create the `bart.cfg` file that will contain the parameter settings.

**Step 2.** Confirm that the Postgres `pg_basebackup` utility program is installed on the BART host. The `pg_basebackup` utility resides in the `bin` directory under your Postgres installation.

<div id="path" class="registered_link"></div>

**Step 3.** Ensure the `LD_LIBRARY_PATH` environment variable includes the location of the `libpq` library. If your `libpq` library does not reside in the default location (`POSTGRES_INSTALL_HOME/lib`), you must add the library path to the `LD_LIBRARY_PATH` environment variable in the BART user account’s profile (`bash_profile`) located in `/home/<bart user account>`:

    # .bash_profile
    # Get the aliases and functions
    if [ -f ~/.bashrc ]; then
    . ~/.bashrc
    fi
    # User specific environment and startup programs
    export LD_LIBRARY_PATH=/usr/edb/as11/lib:$LD_LIBRARY_PATH

**Step 4.** Create the BART backup catalog and ensure the BART user account holds privileges on the BART backup catalog. In the following example, the BART configuration file specifies `/opt/backup` as the parent directory for the BART backup catalog in the `<backup_path>` parameter:

    [BART]

    bart_host = bartuser@192.168.2.22
    backup_path = /opt/backup
    pg_basebackup_path = /usr/edb/as11/bin/pg_basebackup
    logfile = /tmp/bart.log
    scanner_logfile = /tmp/bart_scanner.log

In the following example, `bartuser` is the BART user account. The example creates and sets the ownership and permissions on the BART backup catalog:

    su root
    mkdir /opt/backup
    chown bartuser /opt/backup
    chgrp bartuser /opt/backup
    chmod 700 /opt/backup

If the subdirectory does not exist, BART creates a subdirectory for each database server listed in the configuration file when you invoke the `bart` command line program.

**Step 5.** Use your choice of editor to open the BART configuration file (located in the `usr/edb/bart/etc` directory) and edit the configuration as required. You must add the mandatory parameters to the \[BART\] and \[ServerName\] sections (for example, \[EPAS11\]). Default values may be used for optional parameters.

**Step 6** Invoke the `CHECK-CONFIG` subcommand, omitting the `-s` option to check the parameter settings in the BART configuration file. The `CHECK-CONFIG` subcommand displays an error message if the required configuration is not properly set.

For information about server section parameters, see the [Database Server Parameter Reference](#database_server_parameters).

<div id="configure_database_server" class="registered_link"></div>

### Configuration Parameter Reference

In the table that follows:

> -   Parameters set in the `[BART]` section are applicable to all BART managed database servers.
> -   Parameters set in the `Server` section are applicable only to the specific server; the `Server` parameter setting overrides the `[BART]` section setting.

<table><colgroup><col style="width: 29%" /><col style="width: 15%" /><col style="width: 27%" /><col style="width: 13%" /><col style="width: 13%" /></colgroup><thead><tr class="header"><th><strong>Parameter</strong></th><th><strong>Type</strong></th><th><strong>Default</strong></th><th><strong>Server</strong></th><th><strong>[BART]</strong></th></tr></thead><tbody><tr class="odd"><td><code>[BART]</code></td><td><blockquote><p>Mandatory</p></blockquote></td><td>N/A</td><td><blockquote><p>N/A</p></blockquote></td><td><blockquote><p>yes</p></blockquote></td></tr><tr class="even"><td><code>&lt;bart_host&gt;</code></td><td><blockquote><p>Mandatory</p></blockquote></td><td>N/A</td><td><blockquote><p>N/A</p></blockquote></td><td><blockquote><p>Yes</p></blockquote></td></tr><tr class="odd"><td><code>&lt;backup_path&gt;</code></td><td>Mandatory</td><td>N/A</td><td><blockquote><p>N/A</p></blockquote></td><td><blockquote><p>Yes</p></blockquote></td></tr><tr class="even"><td><code>&lt;pg_basebackup_path&gt;</code></td><td>Mandatory</td><td>N/A</td><td><blockquote><p>N/A</p></blockquote></td><td><blockquote><p>Yes</p></blockquote></td></tr><tr class="odd"><td><code>retention_policy</code></td><td>Optional</td><td><code>&lt;max_number&gt;BACKUPS</code></td><td><blockquote><p>Yes</p></blockquote></td><td><blockquote><p>Yes</p></blockquote></td></tr><tr class="even"><td><code>wal_compression</code></td><td>Optional</td><td>Disabled</td><td>Yes</td><td><blockquote><p>Yes</p></blockquote></td></tr><tr class="odd"><td><code>copy_wals_during_restore</code></td><td>Optional</td><td>Disabled</td><td>Yes</td><td>Yes</td></tr><tr class="even"><td><blockquote><p><code>xlog_method</code></p></blockquote></td><td>Optional</td><td>fetch</td><td>Yes</td><td>Yes</td></tr><tr class="odd"><td><blockquote><p><code>logfile</code></p></blockquote></td><td>Optional</td><td><code>/tmp/bart.log</code></td><td>N/A</td><td>Yes</td></tr><tr class="even"><td><code>scanner_logfile</code></td><td>Optional</td><td><code>/tmp/bart_scanner.log</code></td><td>N/A</td><td>Yes</td></tr><tr class="odd"><td><blockquote><p><code>&lt;bart_socket_directory&gt;</code></p></blockquote></td><td>Optional</td><td><code>/tmp</code></td><td><blockquote><p>N/A</p></blockquote></td><td>Yes</td></tr><tr class="even"><td><code>&lt;thread_count&gt;</code></td><td>Optional</td><td><code>1</code></td><td>Yes</td><td>Yes</td></tr><tr class="odd"><td><code>&lt;batch_size&gt;</code></td><td>Optional</td><td><code>49152</code></td><td>Yes</td><td>Yes</td></tr><tr class="even"><td><code>&lt;scan_interval&gt;</code></td><td>Optional</td><td><code>0</code></td><td>Yes</td><td>Yes</td></tr><tr class="odd"><td><code>&lt;mbm_scan_timeout&gt;</code></td><td>Optional</td><td><code>20 seconds</code></td><td>Yes</td><td>Yes</td></tr><tr class="even"><td><code>&lt;workers&gt;</code></td><td>Optional</td><td><code>1</code></td><td>Yes</td><td>Yes</td></tr><tr class="odd"><td><code>[Server Name]</code></td><td>Mandatory</td><td>N/A</td><td>Yes</td><td><blockquote><p>N/A</p></blockquote></td></tr><tr class="even"><td><code>&lt;backup_name&gt;</code></td><td>Optional</td><td>N/A</td><td>Yes</td><td><blockquote><p>N/A</p></blockquote></td></tr><tr class="odd"><td><code>host</code></td><td>Mandatory</td><td>N/A</td><td>Yes</td><td><blockquote><p>N/A</p></blockquote></td></tr><tr class="even"><td><code>port</code></td><td>Mandatory</td><td><code>5444</code> for EPAS; <code>5432</code> for Postgres</td><td>Yes</td><td>N/A</td></tr><tr class="odd"><td><code>user</code></td><td>Mandatory</td><td>N/A</td><td>Yes</td><td><blockquote><p>N/A</p></blockquote></td></tr><tr class="even"><td><code>&lt;archive_path&gt;</code></td><td>Optional</td><td><code>BART backup catalog</code></td><td>Yes</td><td>N/A</td></tr><tr class="odd"><td><code>&lt;archive_command&gt;</code></td><td>Optional</td><td>N/A</td><td>Yes</td><td><blockquote><p>N/A</p></blockquote></td></tr><tr class="even"><td><code>&lt;cluster_owner&gt;</code></td><td>Mandatory</td><td><blockquote><p><code>enterprisedb</code> for EPAS</p><p><code>postgres</code> for PostgreSQL</p></blockquote></td><td><blockquote><p>Yes</p></blockquote></td><td><blockquote><p>N/A</p></blockquote></td></tr><tr class="odd"><td><code>&lt;remote_host&gt;</code></td><td>Optional</td><td>N/A</td><td><blockquote><p>Yes</p></blockquote></td><td><blockquote><p>N/A</p></blockquote></td></tr><tr class="even"><td><code>&lt;tablespace_path&gt;</code></td><td>Optional</td><td>N/A</td><td><blockquote><p>Yes</p></blockquote></td><td><blockquote><p>N/A</p></blockquote></td></tr><tr class="odd"><td><code>allow_incremental_backup</code></td><td>Optional</td><td><code>Disabled</code></td><td><blockquote><p>Yes</p></blockquote></td><td><blockquote><p>N/A</p></blockquote></td></tr><tr class="even"><td><code>description</code></td><td>Optional</td><td>N/A</td><td><blockquote><p>Yes</p></blockquote></td><td><blockquote><p>N/A</p></blockquote></td></tr></tbody></table>

The following table describes the \[BART\] host parameters.

<table><thead><tr class="header"><th><strong>Parameters/Placeholder</strong></th><th><strong>Description</strong></th></tr></thead><tbody><tr class="odd"><td><code>[BART} (mandatory)</code></td><td>Identifies the global section of the configuration file (it must be named BART).</td></tr><tr class="even"><td><code>bart_host (mandatory)</code></td><td>Specify the bart user name and the IP address of the bart host on which the BART utility resides, in the form of &lt;bart_user&gt;@&lt;bart_host_address&gt;.</td></tr><tr class="odd"><td><code>backup_path (mandatory)</code></td><td>Specify the path to the file system parent directory where all BART backups are stored.</td></tr><tr class="even"><td><code>pg_basebackup_path (mandatory)</code></td><td>Specify the path to the <code>pg_basebackup</code> program that you installed on the BART host. For information about <code>pg_basebackup</code> version-specific restrictions, see the <a href="https://www.enterprisedb.com/edb-docs/">EDB Postgres Backup and Recovery User Guide</a>.</td></tr><tr class="odd"><td><code>wal_compression (optional)</code></td><td><p>Set this parameter to <code>enabled</code> to compress the archived WAL files in gzip format in the BART backup catalog when the <code>MANAGE</code> subcommand is invoked. By default it is set to <code>disabled</code>.<br />
The gzip compression program must be in the BART user account’s <code>PATH</code> and the WAL compression setting must not be enabled for those database servers where you need to take incremental backups.</p></td></tr><tr class="even"><td><code>copy_wals_during_restore</code> (optional)</td><td><p>Set this parameter to <code>enabled</code> to copy the archived WAL files from the BART backup catalog to the <code>restore_path/archived_wals</code> directory prior to the database server archive recovery. Enabling this option helps you save time during the restore operation.<br />
Set this parameter to <code>disabled (default)</code> to retrieve the archived WAL files directly from the BART backup catalog during the database server archive recovery.<br />
During the restore operation, recovery settings will be saved in the <code>postgresql.auto.conf</code> file. The <code>restore_command</code> in the <code>postgresql.auto.conf</code> file will be determined by the value specified in the <code>copy_wals_during_restore</code> parameter.<br />
If the <code>RESTORE</code> subcommand is invoked with the <code>-c</code> option, the archived WAL files are copied from the BART backup catalog to the <code>restore_path/archived_wals</code> directory, thus overriding any setting of the <code>copy_wals_during_restore</code> parameter. If the <code>RESTORE</code> subcommand is invoked without the <code>-c</code> option, the value specified by the <code>copy_wals_during_restore</code> parameter is used.</p></td></tr><tr class="odd"><td><code>xlog_method (optional)</code></td><td><p>Specify how the transaction log is collected during the execution of <code>pg_basebackup</code> through the <code>BACKUP</code> subcommand.<br />
Set <code>xlog_method</code> to <code>fetch</code> (default) to collect the transaction log files after the backup is completed.<br />
Set to <code>stream</code> to stream the transaction log in parallel with the full backup creation.</p></td></tr><tr class="even"><td><code>retention_policy (optional)</code></td><td><p>Set this parameter to determine when an active backup should be marked as <code>obsolete</code> when the <code>MANAGE</code> subcommand is used.<br />
You can specify the retention policy either in terms of number of backups or duration (days, weeks, or months). <code>&lt;max_number&gt; BACKUPS (default)</code>, <code>&lt;max_number&gt; DAYS</code>, <code>&lt;max_number&gt; WEEKS</code>, or <code>&lt;max_number&gt; MONTHS</code> where <code>&lt;max_number&gt;</code> is a positive integer.<br />
For information about managing backups using a retention policy, see the <a href="https:www.enterprisedb.com/edb-docs/">EDB Postgres Backup and Recovery User Guide</a>.</p></td></tr><tr class="odd"><td><code>logfile</code> (optional)</td><td><p>Use this parameter to specify the path to the BART log file. The default log file location is <code>/tmp/bart.log</code>.<br />
The log file will be created the first time you invoke the <code>bart</code> command line program using the sample configuration file value. To change the default setting, you must delete the <code>bart.log</code> file from the <code>/tmp</code> directory and create a new log file in another directory so that a new log file will be created and owned by the new BART user account.<br />
If no path to a log file is specified, BART does not create a log file.</p></td></tr><tr class="even"><td><code>scanner_logfile</code> (optional)</td><td><p>Use this parameter to specify the path to the XLOG/WAL scanner log file. The default location is <code>/tmp/bart_scanner.log</code>.<br />
The scanner log file will be created the first time you invoke the <code>bart_scanner</code> program using the sample configuration file value. To change the default setting, you must delete the <code>bart_scanner.log</code> file from the <code>/tmp</code> directory and create a new log file in another directory so that a new log file will be created and owned by the new BART user account.<br />
If no path to a log file is specified, BART does not create a WAL scanner log file.</p></td></tr><tr class="odd"><td><code>&lt;bart_socket_directory&gt; (optional)</code></td><td>Specify the socket directory path where all BART sockets will be stored. The default directory is <code>/tmp</code>. While specifying the <code>bart_socket_directory</code> path, you must ensure that the directory exists and the BART user has the required access permissions to the directory.</td></tr><tr class="even"><td><code>&lt;thread_count&gt; (optional)</code></td><td><p>Specify the number of worker threads for copying blocks (for incremental backups) or data files (for full backup) from the database server to the <code>archive_path</code> when the <code>BACKUP</code> subcommand is invoked. The default value is <code>1</code>.<br />
The same set of worker threads are used for the compression operation when taking full backups in order to provide parallel, compressed backups when the <code>BACKUP</code> subcommand is specified with the <code>-z</code> or <code>-c</code> options. The compression operation does not apply to incremental backups. See <a href="#thread_count">thread count</a> for more information.</p></td></tr><tr class="odd"><td><code>&lt;batch_size&gt; (optional)</code></td><td><p>Specify the number of blocks of memory used for copying modified blocks from the database server to the <code>archive_path</code> when the <code>BACKUP</code> subcommand is invoked for incremental backups.<br />
The default value is 49152 blocks; each block is 8192 bytes. The maximum permitted value is 131072 blocks and the minimum permitted value is 1 block. Reduce the <code>&lt;batch_size&gt;</code> setting if the server runs out of memory while executing the <code>pg_read_binary_file()</code>.</p></td></tr><tr class="even"><td><code>&lt;scan_interval&gt; (optional)</code></td><td>Specify the number of seconds after which the WAL scanner should scan the new WAL files. The default value is 0, which means no brute-force scanning will be started.</td></tr><tr class="odd"><td><code>&lt;mbm_scan_timeout&gt; (optional)</code></td><td><p>Specify the number of seconds to wait for MBM files before timing out; This parameter is applicable only for incremental backup.<br />
The default value is 20 seconds. The <code>mbm_scan_timeout</code> parameter value must be greater than 0. If the value is 0 or negative, then an error will be displayed during an incremental backup.</p></td></tr><tr class="even"><td><code>&lt;workers&gt; (optional)</code></td><td>Specify the number of parallel worker processes required to stream the modified blocks of an incremental backup to the restore host. The default value is 1.</td></tr></tbody></table>

<div id="thread_count" class="registered_link"></div>

**Thread Count**

If the `BACKUP` subcommand is invoked with the `--thread-count` option, then the number of worker threads specified by this option overrides any setting of the `thread_count` parameter in the BART configuration file. If the `BACKUP` subcommand is invoked without the `--thread-count` option, then the following determines the number of worker threads used:

> -   The setting of the `thread_count` parameter in the server section of the BART configuration file overrides the setting of `thread_count` in the global section for that particular database server.
> -   If omitted in the server section, the setting of `thread_count` in the global section is used.
> -   If the `thread_count` parameter is not specified in either section, the default is 1.
> -   When taking a full backup, if the `thread count` in effect is only 1, then the `pg_basebackup` utility is used to take the full backup unless the `--no-pg_basebackup` option is specified with the `BACKUP` subcommand.

`<thread_count>` will not be effective if the backup is taken on a standby server.

If parallel backup is run with `N` number of worker threads, then it will initiate `N + 1` concurrent connections with the server.

## Configuring the Database Server

This section describes the procedure for enabling BART backup and recovery management for a database server. To configure the database server, you need to:

-   <span class="title-ref">Authorize SSH/SCP access without a password prompt &lt;authorizing\_ssh/scp\_access&gt;</span>.
-   [Create and configure a replication database user](#setting_up_a_replication_database_user).
-   <span class="title-ref">Update the BART configuration file (server section) &lt;adding\_a\_database\_server&gt;</span>.
-   [Enable WAL archiving of the server](#enabling_wal_archiving).
-   [Verify the server configuration settings](#verifying_configuration_settings).

<div class="note">

<div class="title">

Note

</div>

You must authorize SSH/SCP access and set up a replication database user before restarting the database server with WAL archiving enabled.

</div>

<div id="authorizing_ssh_scp_access" class="registered_link"></div>

### Authorizing SSH/SCP Access

BART uses the Secure Shell (`ssh`) and Secure Copy (`scp`) Linux utility programs to copy the backup and WAL files from the BART managed database servers to the BART host as well as to restore backups.

> -   The client/server `ssh` and `scp` commands must not prompt for a password when establishing a connection with the target server (the server to which a passwordless connection is being made).
> -   A passwordless connection uses *authorized public keys* (public key of a client user account) to authenticate with the target server.
> -   You must add the public key of each client user account to the target user account’s authorized public keys list on the target server.

**BART Connections that Require Authentication without a Password**

For BART usage, there are two scenarios that require a passwordless SSH/SCP connection:

-   When connecting from each BART managed database server (SSH/SCP client) to the BART host (target SSH/SCP server) to support WAL archiving as implemented by the `archive_command` parameter.
    -   In this case, the database server user account should generate the public key file (`id_rsa.pub`) with the `ssh-keygen –t rsa` command on the database server host.
    -   The public key file name should be appended to the `~/.ssh/authorized_keys` file on the BART host. The `authorized_keys` file is in the BART user account’s home directory.
-   When connecting from the BART host (SSH/SCP client) to each BART managed database server (target SSH/SCP server) for taking incremental backups and for supporting restoration of the full backup, the archived WAL files, and the modified blocks, which occurs when the BART `RESTORE` subcommand is given.
    -   In this case, the BART user account should generate the public key file (`id_rsa.pub`) with the `ssh-keygen –t rsa` command on the BART host.
    -   The public key file name should be appended to the `~/.ssh/authorized_keys` file on the database server host. The `authorized_keys` file is in the home directory of the user account that owns the directory where the database backup is to be restored.
-   If backups are to be taken from a given database server host, but restored to a different database server host, the passwordless SSH/SCP connections must be configured from the BART host to the database server host from which the backup is to be taken as well as from the BART host to the database server host to which the backup is to be restored.

See the [EDB Postgres Backup and Recovery Reference Guide](https://www.enterprisedb.com/edb-docs/) to view examples of creating a passwordless connection.

**Enabling Public Key Authentication**

The following example enables SSH/SCP access on a CentOS 6.x host; similar (platform-specific) steps will apply to other platforms/versions.

1.  In the SSH server daemon configuration file (`sshd_config`) located in the `/etc/ssh`, set the `PubkeyAuthentication` parameter to `yes`.
2.  Reload the configuration file:

>     service sshd reload

If you get any SSH or SCP errors, examine the `/var/log/secure` log file.

**Creating a Passwordless Connection**

The following general instructions will walk you through generating a client’s public key file, creating the target server’s authorized public keys file, and creating a passwordless connection.

**Step 1.** On the client system, log in as the user account that will be initiating the SSH or SCP connection.

**Step 2.** Navigate to the user account’s home directory and check for an existing `.ssh` subdirectory. If the `.ssh` directory does not exist, create one and assign the required privileges to the user.

**Step 3.** Generate the public key file with the following command. Accept all prompted defaults and do not specify a passphrase when prompted for one.

>     ssh-keygen –t rsa

The public key file named `id_rsa.pub` is created in the `.ssh` subdirectory.

**Step 4.** While logged into the client where you just generated the public key file, use `SCP` to make a temporary copy of it on the target server:

>     scp ~/.ssh/id_rsa.pub <target_user>@<host_address>:tmp.pub

**Step 5.** Navigate into the target user account’s home directory and check for an existing `.ssh` subdirectory. If it does not exist, create one and assign the required privileges to the user.

**Step 6.** Append the temporary, client’s public key file, `tmp.pub`, to the `authorized_keys` file. If an `authorized keys` file does not exist, create a new file, but do not completely replace any existing `authorized keys` file.

>     cat tmp.pub >> ~/.ssh/authorized_keys

Make sure the `authorized_keys` file is only accessible by the file owner and not by groups or other users. If the `authorized_keys` file does not have the required permission setting or it was newly created, change the file permissions as follows:

>     chmod 600 ~/.ssh/authorized_keys

**Step 7.** Delete the temporary public key file:

>     rm tmp.pub

Now, when logged into the client system as `user` there should be no prompt for a password when commands such as the following is given:

>     ssh target_user@host_address

<div id="setting_up_a_replication_database_user" class="registered_link"></div>

### Setting up a Replication Database User

For each database server that is to be managed by BART, a database user must be chosen to serve as the *replication database user*. The replication database user sets the Postgres `archive_command` configuration parameter when the `INIT` subcommand in invoked and creates backups when the `BACKUP` subcommand is invoked. The replication database user must be a `superuser`.

When executed with the PSQL client, the following PostgreSQL command creates a superuser to be the replication database user:

> `CREATE ROLE repuser WITH LOGIN SUPERUSER PASSWORD 'password';`

The `pg_hba.conf` file must minimally permit the replication database user to have access to the database.

In the following example, the `pg_hba.conf` file permits the `repuser` (replication database user) to have access to the `template1` database. The IP address from which `repuser` has access to `template1` database is the location of the BART host:

**For pg\_basebackup only:** If `pg_basebackup` is to be used for taking any backups (such as for standby servers), the replication database user must also be included in the `pg_hba.conf` file as a `replication` database connection as shown by the last entry in the following example.

    # TYPE DATABASE USER ADDRESS METHOD
    # "local" is for Unix domain socket connections only
    local all all md5
    # IPv4 local connections:
    host template1 repuser 192.168.2.22/32 md5
    host all enterprisedb 127.0.0.1/32 md5
    # IPv6 local connections:
    host all all ::1/128 md5
    # Allow replication connections from localhost, by a user with the
    # replication privilege.
    host replication repuser 192.168.2.22/32 md5

The replication database user must be specified for the `user` parameter in the BART configuration file for the database server as shown in the following example:

    [ACCTG]
    host = 192.168.2.24
    port = 5444
    user = repuser
    cluster_owner = enterprisedb
    remote_host = enterprisedb@192.168.2.24
    description = "Accounting"

There must be no password prompt when connecting to the database server with the replication database user. There are several ways to permit this; one recommended method is to use a `.pgpass` file located in the BART user account’s home directory.

For example, if `bartuser` is the BART user account, then the `.pgpass` file located in the `/home/bartuser` directory must contain the following entry:

> `192.168.2.24:5444::repuser:password`

When `bartuser` invokes a BART backup, the password for the replication database user, `repuser`, is obtained from the `.pgpass` file of `bartuser` to connect to the database server running at `192.168.2.24` on `port 5444`.

The `.pgpass` file must contain an entry for each BART managed database server and its corresponding replication database user and password.

<div id="adding_a_database_server" class="registered_link"></div>

### Adding a Database Server to the BART Configuration File

To manage the backup and recovery of a database server, you must add entries to the server section of the BART configuration file (located in `<BART_HOME>/etc/bart.cfg`). Settings in the server section will override the settings in the \[`BART`\] section for that particular database server. If omitted, default values will be used.

For each cluster serviced by BART, the following parameters are required:

    [HR]

    host = 192.168.2.24
    port = 5432
    user = postgres
    cluster_owner = postgres

<div class="note">

<div class="title">

Note

</div>

The port parameter setting is required only if the database server listens on a port other than the default (for example if Postgres listens on a port other than 5432).

</div>

<div id="server" class="registered_link"></div>

#### Database Server Parameter Reference

Set the following parameters in the server section of the BART configuration file. The parameter setting in the server section overrides the setting in the global \[BART\] section for that particular database server. If omitted, the default value will be used.

The following table describes the database server parameters.

<div id="database_server_parameters" class="registered_link"></div>

<div id="server_name" class="registered_link"></div>

<div id="archive_path" class="registered_link"></div>

<div id="archive_command" class="registered_link"></div>

<table><thead><tr class="header"><th><strong>Parameters/Placeholder</strong></th><th><strong>Description</strong></th></tr></thead><tbody><tr class="odd"><td><code>[ServerName] (mandatory)</code></td><td><p>Specify the server name that you want to backup using BART. It is not case-sensitive when referenced with BART subcommand options.<br />
A lowercase conversion of this name is used to create a subdirectory in the BART backup catalog for storing the backups and WAL files for this database server (for eg., epas12).</p></td></tr><tr class="even"><td><code>&lt;backup_name&gt; (optional)</code></td><td><p>Specify a <a href="#backup_name_template">template</a> for user-defined, friendly names that will be assigned to the backups of the database server. The maximum permitted length of backup name is 49 characters.<br />
The <code>&lt;backup_name&gt;</code> parameter can be overridden by the <code>--backup-name</code> option of the <code>BACKUP</code> subcommand. If this parameter is omitted from the BART configuration file, and the <code>--backup-name</code> option with a user-defined name is not specified with the <code>BACKUP</code> subcommand, then the backup can only be referenced in BART subcommands by the BART assigned, integer backup identifier.</p></td></tr><tr class="odd"><td><code>host (mandatory)</code></td><td>Specify the IP address of the database server to be configured for backup.</td></tr><tr class="even"><td><code>port (mandatory)</code></td><td><p>Specify the port number identifying the database server instance (that is, the relevant database cluster) to be backed up. The default port number for EPAS is <code>5444</code> and for Postgres it is <code>5432</code>.<br />
The port parameter setting is only required if the database server listens on a port other than the default value.</p></td></tr><tr class="odd"><td><code>User (mandatory)</code></td><td><p>Specify the replication database user name used by BART to establish the connection to the database server for full backups. See <a href="#setting_up_a_replication_database_user">Setting up a Replication Database User</a> for more information.</p></td></tr><tr class="even"><td><code>&lt;archive_path&gt; (optional)</code></td><td><p>Specify the path where archived WAL files will be stored.<br />
The default location is the BART backup catalog (<code>&lt;backup_path&gt;/&lt;server_name&gt;/archived_wals</code>).</p></td></tr><tr class="odd"><td><code>&lt;archive_command&gt; (optional)</code></td><td><p>When the <code>INIT</code> subcommand is used, the content and variables specified in the BART <code>&lt;archive_command&gt;</code> result in the archive command string to be generated into the <code>Postgres archive_command</code> parameter in the <code>postgresql.auto.conf</code> file.<br />
To configure the BART <code>&lt;archive_command&gt;</code> parameter, enclose the command string within single quotes ('). If you do not specify the <code>&lt;archive_command&gt;</code> parameter in the configuration file, the default setting is taken as <code>'scp %p %h:%a/%f'</code>. See <a href="#archive_command_auto_configuration">Archive Command Auto Configuration</a> for information about variables.<br />
The BART <code>&lt;archive_command&gt;</code> parameter in the BART configuration file, and the Postgres <code>&lt;archive_command&gt;</code> parameter in the <code>postgresql.conf</code> file (or the <code>postgresql.auto.conf</code> file) refer to two different parameters that are to be set in different manners.</p></td></tr><tr class="even"><td><code>&lt;cluster_owner&gt; (required)</code></td><td><p>Specify the Linux operating system user account that owns the database cluster.<br />
This is typically <code>enterprisedb</code> for Advanced Server database clusters installed in the Oracle compatible mode, or <code>postgres</code> for Advanced Server database clusters installed in the PostgreSQL compatible mode and PostgreSQL database clusters.</p></td></tr><tr class="odd"><td><code>&lt;remote_host&gt; (optional)</code></td><td><p>Specify the IP address of the remote server to which a backup is to be restored. Specify this parameter in the form of <code>&lt;remote_user&gt;@&lt;remote_host_address&gt;</code>.<br />
<code>&lt;remote_user&gt;</code> is the user account on the target database server host that accepts a passwordless SSH/SCP login connection and owns the directory where the backup is to be restored.<br />
<code>&lt;remote_host_address&gt;</code> is the IP address of the remote host.<br />
For restoring a backup to a remote host or for restoring any backup where <code>&lt;remote_user&gt;</code> and the BART user account are not the same users, either this parameter must be set or it may be specified with the <code>-r</code> option with the BART <code>RESTORE</code> subcommand.</p></td></tr><tr class="even"><td><code>&lt;tablespace_path&gt; (optional)</code></td><td>Specify path to which tablespaces are to be restored in the format <code>OID = &lt;tablespace_path&gt;</code>; If the backup is to be restored to a remote host specified by the <code>&lt;remote_host&gt;</code> parameter, then the tablespace paths must exist on the remote host.</td></tr><tr class="odd"><td><code>allow_incremental_backups (optional)</code></td><td><p>Set this parameter to <code>enabled</code> to enable use of the WAL scanner and permit taking incremental backups when the <code>BACKUP</code> subcommand is invoked with the <code>--parent</code> option.<br />
Set it to <code>disabled</code> (default) to disallow incremental backups and thus permit only full backups.<br />
For information about using the <code>BACKUP</code> subcommand and running the WAL scanner, please see the EDB Postgres Backup and Recovery User Guide <a href="https://www.enterprisedb.com/edb-docs/">available at this page</a>.</p></td></tr><tr class="even"><td><code>Description (optional)</code></td><td>Specify the description that will be used to identify the database server.</td></tr></tbody></table>

For information regarding how to configure the following parameters, see [configuring the BART host](#configuring_the_bart_host).

> -   `retention_policy`
> -   `xlog_method`
> -   `wal_compression`
> -   `copy_wals_during_restore`.
> -   `thread_count`.
> -   `batch_size`.
> -   `scan_interval`.
> -   `mbm_scan_timeout`.
> -   `workers`

<div id="backup_name_template" class="registered_link"></div>

**Backup Name Template**

-   The template is an alphanumeric string that may include the following variables that will be replaced with the timestamp values when the backup is taken:

    > -   `%year` to be replaced by 4-digit year
    > -   `%month` to be replaced by 2-digit month
    > -   `%day` to be replaced by 2-digit day
    > -   `%hour` to be replaced by 2-digit hour
    > -   `%minute` to be replaced by 2-digit minute
    > -   `%second` to be replaced by 2-digit second

-   To include a percent sign (`%`) as a character in the backup name, specify `%%` in the template.

-   Do not enclose the template string in quotes even if you want the template to include space characters, otherwise the enclosing quotes are stored as part of the backup name. However, when referenced with the `-i` option by BART subcommands use of space characters in the backup name requires enclosing the backup name in quotes.

The following example shows the configuration settings of three database servers:

    [ACCTG]

    host = 127.0.0.1
    port = 5444
    user = enterprisedb
    cluster_owner = enterprisedb
    backup_name = acctg_%year-%month-%dayT%hour:%minute:%second
    archive_command = 'cp %p %a/%f'
    allow_incremental_backups = enabled
    retention_policy = 8 BACKUPS
    description = "Accounting"

    [MKTG]

    host = 192.168.2.24
    port = 5444
    user = repuser
    cluster_owner = enterprisedb
    remote_host = enterprisedb@192.168.2.24
    allow_incremental_backups = enabled
    description = "Marketing"

    [HR]

    host = 127.0.0.1
    port = 5432
    user = postgres
    cluster_owner = postgres
    retention_policy = 4 DAYS
    description = "Human Resources"

<div id="enabling_wal_archiving" class="registered_link"></div>

### Enabling WAL Archiving

WAL archiving must be enabled for the database server for which BART is to perform backup and recovery management.

-   The WAL Archiving Configuration section describes the manual WAL archiving configuration process.
-   The Archive Command Auto Configuration section describes an automated WAL archiving process.

**WAL Archiving Configuration**

Set the following configuration parameters in the `postgresql.conf` file to enable WAL archiving

-   Set `wal_level` to `archive` for Postgres 9.5 or to `replica` for Postgres 9.6 or later.
-   Set `archive_mode` to `on`.
-   Set the PostgreSQL `archive_command` parameter to copy the WAL files to the `archive_path`. The `archive_command` configuration parameter mentioned here is located in the `postgresql.conf` file; the PostgreSQL `archive_command` parameter is used in a different manner than the BART <span class="title-ref">archive\_command &lt;archive\_command&gt;</span>.
-   Set `max_wal_senders` to a value high enough to leave at least one session available for the backup. If the `xlog_method=stream` parameter setting is to be used by this database server, the `max_wal_senders` setting must account for an additional session for the transaction log streaming (the setting must be a minimum of 2). See [Configuring the BART host](#configuring_the_bart_host) for information about the `xlog_method` parameter.

For detailed information about WAL archiving, see the [PostgreSQL Core Documentation](https://www.postgresql.org/docs/current/static/continuous-archiving.html).

The `ARCHIVE PATH` field displayed by the BART `SHOW-SERVERS` subcommand displays the full directory path where the WAL files should be copied as specified in the `archive_command` configuration parameter in the `postgresql.conf` file:

    -bash-4.1$ bart SHOW-SERVERS -s acctg
    SERVER NAME : acctg
    HOST NAME : 192.168.2.24
    USER NAME : repuser
    PORT : 5444
    REMOTE HOST :
    RETENTION POLICY : none
    DISK UTILIZATION : 0.00 bytes
    NUMBER OF ARCHIVES : 0
    ARCHIVE PATH : /opt/backup/acctg/archived_wals
    ARCHIVE COMMAND : (disabled)
    XLOG METHOD : fetch
    WAL COMPRESSION : disabled
    TABLESPACE PATH(s) :
    INCREMENTAL BACKUP : DISABLED
    DESCRIPTION : "Accounting"

The parameter settings in the following example will copy the WAL files to a directory named `/opt/backup/acctg/archived_wals` on the BART host located at `192.168.2.22` as the `bartuser` user account. Using the `bartuser` account ensures that the operation will have sufficient permissions to copy to the BART backup catalog owned by `bartuser`.

    wal_level = archive                      # minimal, archive, or hot_standby
                                             # (change requires restart)
    ...

    archive_mode = on                        # allows archiving to be done
                                             # (change requires restart)
    archive_command = 'scp %p bartuser@192.168.2.22:/opt/backup/acctg/archived_wals/%f'
                                             # command to use to archive a logfile segment
                                             # placeholders: %p = path of file to archive
                                             # %f = file name only
    ...

    max_wal_senders = 1                      # max number of walsender processes
                                             # (change requires restart)

The database server must be restarted in order to initiate WAL archiving, but do not do so until you have verified that the full path of the BART backup catalog has been created by some prior BART subcommand or the archive operation will fail.

Start the WAL scanner by executing the following command:

    ./bart-scanner

<div id="archive_command_auto_configuration" class="registered_link"></div>



**Archive Command Auto Configuration**

To enable WAL archiving:

-   In the `postgresql.conf` file, set the `wal_level` to `archive` for Postgres 9.5 or to `replica` for Postgres 9.6 or later, set the `archive_mode` to `on`, and set `max_wal_senders` to a value high enough to leave at least one session available for the backup. If the `xlog_method=stream` parameter setting is to be used by this database server as determined in the BART configuration file, the `max_wal_senders` setting must account for an additional session for the transaction log streaming (that is, the setting must be a minimum of `2`). See [Configuring the BART host](#configuring_the_bart_host) for information on the `xlog_method` parameter.

-   Configure the Postgres `archive_command` parameter automatically with the `INIT` subcommand and restart the database server when you are ready to initiate WAL archiving. The `INIT` subcommand invokes the Postgres `ALTER SYSTEM` command to set the Postgres `archive_command` configuration parameter in the `postgresql.auto.conf` file located in the managed database server’s `POSTGRES_INSTALL_HOME data directory`. For additional information about the `INIT` subcommand, see the [EDB Postgres Backup and Recovery User Guide](https://www.enterprisedb.com/edb-docs/).

    The archive command string that the `INIT` subcommand generates into the `postgresql.auto.conf` file is determined by the parameter setting of the BART `archive_command` parameter in the server section of the BART configuration file. If the BART `archive_command` parameter is not set in the server section for a given database server, the command string that is configured uses the following default format:

    > `'scp %p %h:%a/%f'`

    The following table describes these variables:

<table><thead><tr class="header"><th><strong>Variable</strong></th><th><strong>Description</strong></th></tr></thead><tbody><tr class="odd"><td><code>%p</code></td><td>The path of the file to archive used by the Postgres archiving process.</td></tr><tr class="even"><td><code>%h</code></td><td>Will be replaced by the <code>&lt;bart_user&gt;@&lt;bart_host_address&gt;</code> as specified in the &lt;bart_host&gt; parameter setting.</td></tr><tr class="odd"><td><code>%a</code></td><td><p>Will be replaced by the BART <code>archived_wals</code> directory as specified in the <a href="#archive_path">archive path</a> parameter setting.<br />
If the <code>&lt;archive_path&gt;</code> is not specified, then the default directory is <code>&lt;backup_path&gt;/&lt;server_name&gt;/archived_wals</code>. <code>&lt;server_name&gt;</code> is the lowercase conversion of the database server name.</p></td></tr><tr class="even"><td><code>%f</code></td><td>The archived file name used by the Postgres archiving process.</td></tr></tbody></table>

The placeholders `%h` and `%a` are replaced by the `INIT` subcommand when creating the archive command string. The placeholders `%p` and `%f` are not replaced by the `INIT` subcommand, but are kept as given to be used by the Postgres archiving process.

For example, to use the default archive command format, the BART configuration file contains the following settings where the BART `archive_command` parameter is omitted from the server section for `ACCTG`:

    [BART]

    bart_host= bartuser@192.168.2.22
    backup_path = /opt/backup
    pg_basebackup_path = /usr/edb/as11/bin/pg_basebackup
    logfile = /tmp/bart.log
    scanner_logfile = /tmp/bart_scanner.log

    [ACCTG]

    host = 127.0.0.1
    port = 5444
    user = repuser
    cluster_owner = enterprisedb
    description = "Accounting"

The `INIT` subcommand is invoked by BART user account `bartuser` as follows:

    [bartuser@localhost ~]$ bart INIT -s acctg -o
    INFO: setting archive_command for server 'acctg'
    WARNING: archive_command is set. server restart is required

If the BART backup catalog directory is not already complete, it will be completed.

The resulting archive command string in the `postgresql.auto.conf` file located in the managed database server’s `POSTGRES_INSTALL_HOME/data directory` appears as follows:

    # Do not edit this file manually!
    # It will be overwritten by ALTER SYSTEM command.
    archive_command = 'scp %p
    bartuser@192.168.2.22:/opt/backup/acctg/archived_wals/%f'

Run the `INIT` subcommand with the `-o` option to override any existing `archive_command` setting in the `postgresql.conf` or the `postgresql.auto.conf` file. In addition, the `-o` option must be used to generate the command string if the `archive_mode` is set to off even if there are no existing settings of the `archive_command` in the `postgresql.conf` or `postgresql.auto.conf` files.

In this example, the following BART configuration file is used with an explicit setting of the BART `archive_command` parameter:

    [BART]

    bart_host= enterprisedb@192.168.2.22
    backup_path = /opt/backup
    pg_basebackup_path = /usr/edb/as11/bin/pg_basebackup
    logfile = /tmp/bart.log
    scanner_logfile = /tmp/bart_scanner.log

    [ACCTG]

    host = 127.0.0.1
    port = 5444
    user = repuser
    cluster_owner = enterprisedb
    archive_command = 'cp %p %a/%f'
    description = "Accounting"

The `INIT` subcommand is invoked by BART user account `enterprisedb` as follows:

    -bash-4.1$ bart INIT -s acctg -o
    INFO: setting archive_command for server 'acctg'
    WARNING: archive_command is set. server restart is required

The resulting Postgres `archive_command` parameter in the `postgresql.auto.conf` file appears as follows:

    # Do not edit this file manually!
    # It will be overwritten by ALTER SYSTEM command.
    archive_command = 'cp %p /opt/backup/acctg/archived_wals/%f'

When the database server has been restarted, the `ARCHIVE COMMAND` field of the `SHOW-SERVERS` subcommand displays the active Postgres archive command as shown by the following example:

    -bash-4.1$ bart SHOW-SERVERS -s acctg
    SERVER NAME : acctg
    HOST NAME : 127.0.0.1
    USER NAME : repuser
    PORT : 5444
    REMOTE HOST :
    RETENTION POLICY : none
    DISK UTILIZATION : 48.00 MB
    NUMBER OF ARCHIVES : 0
    ARCHIVE PATH : /opt/backup/acctg/archived_wals
    ARCHIVE SCOMMAND : `cp %p /opt/backup/acctg/archived_wals/%f`
    XLOG METHOD : fetch
    WAL COMPRESSION : disabled
    TABLESPACE PATH(s) :
    INCREMENTAL BACKUP : DISABLED
    DESCRIPTION : "Accounting"

<div id="verifying_configuration_settings" class="registered_link"></div>

### Verifying Configuration Settings

To verify the parameter settings of the database server specified, execute tthe `CHECK-CONFIG` subcommand with the `–s` option:

    bart CHECK-CONFIG [ –s server_name ]

The `CHECK-CONFIG` subcommand confirms the following:

-   The `cluster_owner` parameter is set to the user account owning the database cluster directory.
-   A passwordless SSH/SCP connection is set between the BART user and the user account specified by the `cluster_owner` parameter.
-   The BART `user` parameter specifies a database superuser.
-   The BART `user` has access to the backup directory catalog.
-   The `pg_hba.conf` file contains a replication entry for the database superuser specified by the BART `user` parameter.
-   The `archive_mode` parameter in the `postgresql.conf` file is enabled.
-   The `archive_command` parameter in the `postgresql.auto.conf` or the `postgresql.conf` file is set.
-   The `allow_incremental_backups` parameter in the BART configuration file is enabled for database servers for which incremental backups are to be taken.
-   Archiving of WAL files to the `archive_path` is in process.
-   The WAL scanner program is running.

After configuring the BART host and the database server(s), you can start using BART. For information about using BART, see the [EDB Postgres Backup and Recovery User Guide](https://www.enterprisedb.com/edb-docs/).
